welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:8: error: not found: value corssing
      if (corssing()==true) {
          ^